<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/black_list_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/test"
        app:theme="@style/Toolbar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/font_pf_display_medium"
            android:gravity="center|start"
            android:text="@string/black_list"
            android:textColor="@color/colorGray20"
            android:textSize="20sp" />

    </android.support.v7.widget.Toolbar>





    <EditText
        android:id="@+id/search_black_list_edit"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rectangle_shadow"
        android:drawableStart="@drawable/ic_search_api"
        android:drawablePadding="12dp"
        android:fontFamily="@font/font_pf_display_regular"
        android:hint="@string/search_text"
        android:inputType="text"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:textColorHint="@color/colorPurple60"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/black_list_tool_bar"
        tools:ignore="Autofill" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/black_list_recycler_view"
        style="@style/RecyclerViewStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_black_list_edit" />

    <TextView
        android:id="@+id/black_list_empty_text"
        style="@style/EmptyListStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/empty_black_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/black_list_tool_bar" />




</android.support.constraint.ConstraintLayout>