<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray20"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:ignore="Autofill">

    <android.support.v7.widget.Toolbar
        android:id="@+id/dialog_list_tool_bar"
        app:theme="@style/Toolbar"
        app:popupTheme="@style/test"

        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/dialog_list_state_toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/font_pf_display_medium"
                android:textColor="@color/colorGray20"
                android:textSize="20sp"
                tools:text="@string/refresh_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/dialog_list_refresh_connection_toolbar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorPurple100"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_refresh"
                android:contentDescription="@string/refresh_text" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.Toolbar>



    <EditText
        android:id="@+id/search_message_edit"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rectangle_shadow"
        android:drawableStart="@drawable/ic_search_api"
        android:drawablePadding="12dp"
        android:fontFamily="@font/font_pf_display_regular"


        android:hint="@string/search_text"
        android:inputType="text"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:textColorHint="@color/colorPurple60"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_list_tool_bar" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/message_recycler_view"
        style="@style/RecyclerViewStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_message_edit" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_dialog_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:backgroundTint="@color/colorPurple100"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_message2" />

    <TextView
        android:id="@+id/empty_list_item"
        style="@style/EmptyListStyle"
        android:text="@string/empty_dialogs_list"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_view"
        app:layout_constraintTop_toTopOf="@+id/search_message_edit" />


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation_view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPurple100"
        app:itemIconTint="@color/bottom_navigation_item"
        app:itemTextColor="@color/bottom_navigation_item"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_navigation_menu">


    </android.support.design.widget.BottomNavigationView>


</android.support.constraint.ConstraintLayout>